--- a/src/index.css
+++ b/src/index.css
@@ -1,11 +1,30 @@
+@import url(./styles/navigation.css);
+@import url(./styles/sidebar.css);
+@import url(./styles/about.css);
+@import url(./styles/blog.css);
+@import url(./styles/resume.css);
+@import url(./styles/portfolio.css);
+@import url(./styles/contacts.css);
+
 :root {
-  font-family: Inter, system-ui, Avenir, Helvetica, Arial, sans-serif;
+  font-family: 'Montserrat', sans-serif;
   line-height: 1.5;
+  letter-spacing: 1px;
   font-weight: 400;
+  box-sizing: border-box;
+
+  --background-color: #242424;
+  --background-color-light: #ffffff;
+  --font-color: #ffffff;
+  --font-color-light: #242424;
+  --section-color: #323232;
+  --frame-color: #505050;
+  --transition: 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  --hover-color: #7ba05b;
 
   color-scheme: light dark;
-  color: rgba(255, 255, 255, 0.87);
-  background-color: #242424;
+  color: var(--font-color);
+  background-color: var(--background-color);
 
   font-synthesis: none;
   text-rendering: optimizeLegibility;
@@ -13,15 +32,25 @@
   -moz-osx-font-smoothing: grayscale;
   -webkit-text-size-adjust: 100%;
 }
-
+ul,
+li {
+  list-style: none;
+  margin: 0;
+  padding: 0;
+}
 a {
-  font-weight: 500;
-  color: #646cff;
-  text-decoration: inherit;
+  text-decoration: none;
+  cursor: pointer;
+  color: var(--font-color);
 }
-a:hover {
-  color: #535bf2;
+
+button {
+  display: inline-block;
+  cursor: pointer;
 }
+
+/* #242424 */
+/* #575757 */
 
 body {
   margin: 0;
@@ -31,39 +60,33 @@ body {
   min-height: 100vh;
 }
 
-h1 {
-  font-size: 3.2em;
-  line-height: 1.1;
-}
-
-button {
-  border-radius: 8px;
-  border: 1px solid transparent;
-  padding: 0.6em 1.2em;
-  font-size: 1em;
-  font-weight: 500;
-  font-family: inherit;
-  background-color: #1a1a1a;
-  cursor: pointer;
-  transition: border-color 0.25s;
-}
-button:hover {
-  border-color: #646cff;
-}
-button:focus,
-button:focus-visible {
-  outline: 4px auto -webkit-focus-ring-color;
-}
-
 @media (prefers-color-scheme: light) {
   :root {
-    color: #213547;
-    background-color: #ffffff;
-  }
-  a:hover {
-    color: #747bff;
+    color: var(--font-color-light);
+    background-color: var(--background-color-light);
   }
   button {
     background-color: #f9f9f9;
   }
+}
+
+.container {
+  max-width: 1200px;
+  padding: 15px;
+  margin: 0 auto;
+}
+
+.app {
+  display: flex;
+  gap: 20px;
+}
+
+.content {
+  position: relative;
+  overflow: hidden;
+  background-color: var(--section-color);
+  max-width: 810px;
+  padding: 20px;
+  padding-top: 50px;
+  border-radius: 10px;
 }
