--- a/src/styles/about.css
+++ b/src/styles/about.css
@@ -38,7 +38,7 @@
 }
 
 .directions__title {
-  font-size: 24px;
+  font-size: 22px;
   margin-top: 0;
   margin-bottom: 20px;
 }
@@ -82,4 +82,14 @@
 .directions__text {
   margin: 0;
   font-size: 14px;
+}
+
+.reviews {
+  margin-bottom: 0;
+}
+
+.reviews__title {
+  font-size: 22px;
+  margin-top: 0;
+  margin-bottom: 20px;
 }
