--- a/src/styles/sidebar.css
+++ b/src/styles/sidebar.css
@@ -1,5 +1,6 @@
 .sidebar {
   max-width: 320px;
+  max-height: 650px;
   background-color: var(--section-color);
   padding: 20px;
   border-radius: 10px;
