--- a/src/styles/navigation.css
+++ b/src/styles/navigation.css
@@ -1,28 +1,58 @@
 .nav {
   background-color: var(--frame-color);
-  padding-right: 22px;
-  padding-left: 14px;
-  border-radius: 10px;
-
+  padding-right: 15px;
+  padding-left: 15px;
   display: flex;
   align-items: center;
   justify-content: space-between;
-  gap: 40px;
   position: absolute;
-  top: -8px;
-  right: -8px;
+  border-bottom-right-radius: 10px;
+  border-bottom-left-radius: 10px;
+
+  top: 0;
+  left: 50%;
+  transform: translate(-50%);
   z-index: 5;
+  margin: 0 auto;
+
+  @media screen and (min-width: 768px) {
+    position: absolute;
+    top: 0;
+    right: 0;
+    left: auto;
+    transform: none;
+    border-bottom-left-radius: 10px;
+    border-top-left-radius: 0;
+    border-bottom-right-radius: 0;
+  }
+  @media screen and (min-width: 1200px) {
+    max-width: 1200px;
+  }
 }
 
 .nav__list {
   display: flex;
-  gap: 20px;
+  align-items: center;
+  gap: 10px;
+  padding-top: 10px;
+  padding-bottom: 10px;
+
+  @media screen and (min-width: 1200px) {
+    gap: 20px;
+  }
 }
 
 .nav__list li {
-  padding-top: 22px;
-  padding-bottom: 14px;
   cursor: pointer;
+  height: 30px;
+  vertical-align: middle;
+  display: flex;
+  align-items: center;
+  font-size: 12px;
+
+  @media screen and (min-width: 480px) {
+    font-size: 16px;
+  }
 }
 
 .nav__link {
