--- a/src/styles/modal.css
+++ b/src/styles/modal.css
@@ -25,7 +25,7 @@
   background-color: var(--frame-color);
   box-shadow: 0 16px 40px hsla(0, 0%, 0%, 0.25);
   border-radius: 8px;
-  padding: 30px 20px;
+  padding: 40px 20px;
   transition: var(--transition);
   display: flex;
   flex-direction: column;
@@ -39,6 +39,7 @@
     max-width: 700px;
     height: 450px;
     flex-direction: row;
+    padding: 30px 20px;
   }
   @media screen and (min-width: 1200px) {
     max-width: 800px;
@@ -55,17 +56,18 @@
   position: absolute;
   top: 10px;
   right: 10px;
-  width: 35px;
-  height: 35px;
+  width: 20px;
+  height: 20px;
   padding: 0;
   background-color: transparent;
   border: none;
 }
 
 .close__icon {
-  width: 35px;
-  height: 35px;
+  width: 20px;
+  height: 20px;
   background-color: transparent;
+  fill: var(--font-color);
 }
 
 .close__icon use {
@@ -129,11 +131,12 @@
 .modal__backend {
   display: inline-flex;
   align-items: center;
+  fill: var(--font-color);
 }
 
 .link__icon {
-  width: 35px;
-  height: 35px;
+  width: 30px;
+  height: 30px;
   margin-right: 15px;
 }
 
