--- a/src/styles/contact.css
+++ b/src/styles/contact.css
@@ -13,7 +13,6 @@
 }
 
 .form {
-  /* max-width: 600px; */
   display: flex;
   flex-wrap: wrap;
   gap: 15px;
@@ -26,6 +25,7 @@
   flex-basis: 300px;
   height: 40px;
   border: 1px solid var(--frame-color);
+  background-color: var(--background-color);
   border-radius: 10px;
   padding: 5px 10px;
   font-size: 16px;
@@ -41,7 +41,10 @@
   margin: 0 auto;
   width: 200px;
   height: 40px;
-  border: 1px solid var(--frame-color);
+  color: var(--sidebar-color);
+  border: none;
+  /* border: 1px solid var(--border-color); */
+  background-color: var(--hover-color);
   border-radius: 8px;
   font-size: 16px;
   font-weight: 700;
@@ -50,5 +53,5 @@
 
 .submit:hover,
 .submit:focus {
-  background-color: var(--hover-color);
+  background-color: var(--button-hover);
 }
