--- a/src/styles/navigation.css
+++ b/src/styles/navigation.css
@@ -1,5 +1,4 @@
 .nav {
-  background-color: var(--frame-color);
   padding-right: 15px;
   padding-left: 15px;
   display: flex;
@@ -37,6 +36,10 @@
   padding-top: 10px;
   padding-bottom: 10px;
 
+  @media screen and (min-width: 480px) {
+    gap: 15px;
+  }
+
   @media screen and (min-width: 1200px) {
     gap: 20px;
   }
@@ -48,11 +51,26 @@
   vertical-align: middle;
   display: flex;
   align-items: center;
-  font-size: 12px;
+  font-size: 14px;
 
   @media screen and (min-width: 480px) {
-    font-size: 16px;
+    font-size: 18px;
   }
+}
+
+.current {
+  color: var(--hover-color);
+}
+
+.current:before {
+  display: inline-block;
+  width: 30px;
+  height: 3px;
+  border-radius: 5px;
+  background-color: var(--hover-color);
+  position: absolute;
+  bottom: 0;
+  content: ' ';
 }
 
 .nav__link {
