--- a/src/styles/sidebar.css
+++ b/src/styles/sidebar.css
@@ -1,13 +1,24 @@
 .sidebar {
   box-sizing: border-box;
-  max-width: 480px;
-  max-height: 850px;
-  background-color: var(--section-color);
-  padding: 20px;
+  min-width: 320px;
+  max-width: 320px;
+  min-height: 100vh;
+  background-color: var(--sidebar-color);
+  padding: 20px 10px;
   border-radius: 10px;
+  box-shadow: 0px 0px 300px 22px rgba(224, 224, 224, 1);
+  @media screen and (min-width: 480px) {
+    min-width: 330px;
+    max-width: 480px;
+  }
+
   @media screen and (min-width: 768px) {
-    max-width: 320px;
-    width: 100%;
+    min-width: 300px;
+    max-width: 300px;
+  }
+  @media screen and (min-width: 1200px) {
+    min-width: 330px;
+    max-width: 330px;
   }
 }
 
@@ -20,7 +31,6 @@
   margin-bottom: 15px;
 }
 .me__avatar {
-  background-color: var(--frame-color);
   border-radius: 10px;
   margin: 0 auto;
 }
@@ -30,6 +40,7 @@
   margin-top: 10px;
   margin-bottom: 5px;
   text-align: center;
+
   @media screen and (min-width: 768px) {
     font-size: 26px;
     margin-top: 15px;
@@ -41,7 +52,6 @@
   font-size: 14x;
   margin-top: 0;
   margin-bottom: 20px;
-  background-color: var(--frame-color);
   padding: 5px 10px;
   border-radius: 5px;
   text-align: center;
@@ -54,7 +64,7 @@
 }
 
 .contacts {
-  margin-bottom: 30px;
+  margin-bottom: 20px;
   padding: 0 10px;
 }
 
@@ -71,10 +81,7 @@
 .contacts__icon {
   width: 50px;
   height: 50px;
-  background-color: var(--frame-color);
   border-radius: 8px;
-  box-shadow: -1px -1px 5px -2px rgba(255, 255, 255, 1),
-    1px 2px 5px -1px rgba(0, 0, 0, 1);
 }
 
 .contacts__icon,
