--- a/src/index.css
+++ b/src/index.css
@@ -6,6 +6,7 @@
 @import url(./styles/modal.css);
 /* @import url(./styles/blog.css); */
 @import url(./styles/contact.css);
+@import url(./styles/contactForm.css);
 
 :root {
   font-family: 'Montserrat', sans-serif;
