--- a/src/styles/contactForm.css
+++ b/src/styles/contactForm.css
@@ -7,8 +7,7 @@
 }
 
 .form__field {
-  flex-grow: 1;
-  flex-basis: 300px;
+  flex: 1 1 45%;
   height: 40px;
   border: 1px solid var(--frame-color);
   background-color: var(--background-color);
@@ -17,8 +16,14 @@
   font-size: 16px;
 }
 
-.form__field:last-child {
+.textarea {
+  box-sizing: border-box;
+  flex: 1 0 100%;
   height: 100px;
+  border: 1px solid var(--frame-color);
+  background-color: var(--background-color);
+  border-radius: 10px;
+  font-size: 16px;
   padding: 15px 10px;
 }
 
